# radiology-copilot

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: pages.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/schemas/: api.py
backend/app/services/: ai_detection.py  imaging.py  reporting.py
database/: init.sql
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/reports/: page.tsx
frontend/app/studies/[id]/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/ai/: chat-assistant.tsx
frontend/components/dashboard/: analytics-cards.tsx
frontend/components/demo/: demo-footer.tsx  theme-toggle.tsx
frontend/components/dicom/: dicom-viewer.tsx
frontend/components/layout/: sidebar.tsx
frontend/components/reports/: report-editor.tsx
frontend/components/ui/: button.tsx  card.tsx  input.tsx
frontend/components/upload/: upload-dropzone.tsx
frontend/lib/: api.ts
