[project]
name = "radiology-copilot-backend"
version = "0.1.0"
description = "FastAPI AI radiology report generation backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "sqlalchemy[asyncio]>=2.0.29",
  "asyncpg>=0.29.0",
  "pydantic-settings>=2.2.1",
  "email-validator>=2.1.1",
  "python-multipart>=0.0.9",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "openai>=1.30.0",
  "pydicom>=2.4.4",
  "monai>=1.3.0",
  "torch>=2.2.0",
  "numpy>=1.26.0",
  "pillow>=10.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "httpx>=0.27.0", "ruff>=0.4.4"]

[tool.ruff]
line-length = 100
target-version = "py311"
